# godtify

./: .clang-format  CMakeLists.txt  LICENSE  README.md  make.bat
src/: main.cpp  resource.h  resource.rc
