cmake_minimum_required (VERSION 3.20.1)

project(godtify VERSION 0.0.1)

string (TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
add_compile_definitions(${BUILD_TYPE})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/Debug)
set(CMAKE_PDB_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Release)
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/out)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})

set(GODTIFY_SOURCES src/main.cpp)

set(GODTIFY_RESOURCES src/resource.rc)

add_executable(godtify WIN32 ${GODTIFY_SOURCES} ${GODTIFY_RESOURCES})
